[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pydantic~=1.9.0",
    "requests~=2.27.1",
    "git+git://github.com/LeMyst/WikibaseIntegrator@v0.12.0.dev5#egg=wikibaseintegrator",
    "rich~=10.9.0",
    "console-menu",
    "SPARQLWrapper~=1.8.5"
]
build-backend = "setuptools.build_meta"