[metadata]
name = itemsubjector
version = 0.3-alpha0
author = Dennis Priskorn
author_email = dp_public@riseup.net
description = CLI-tool to easily add "main subject" aka topics in bulk to groups of items on Wikidata
long_description = file: README.md
long_description_content_type = text/markdown
keywords = wikidata, subjects, entity linking, scientific graph, linked open data
url = https://github.com/dpriskorn/ItemSubjector
project_urls =
    Bug Tracker = https://github.com/dpriskorn/ItemSubjector/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Utilities

[options]
packages = src
python_requires = >=3.6